k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sark-system
  labels:
    name: sark-system
    app.kubernetes.io/name: sark
    app.kubernetes.io/part-of: sark
